docs/api/qiskit/2.0/qiskit.circuit.CommutationChecker.mdx
---
title: CommutationChecker (v2.0)
description: API reference for qiskit.circuit.CommutationChecker in qiskit v2.0
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.CommutationChecker
---

# CommutationChecker

<Class id="qiskit.circuit.CommutationChecker" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/commutation_checker.py#L22-L133" signature="qiskit.circuit.CommutationChecker(standard_gate_commutations=None, cache_max_entries=1000000, *, gates=None)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")

  Check commutations of two operations.

  Two unitaries $A$ and $B$ on $n$ qubits commute if

$$
\frac{2^n F_{\text{process}}(AB, BA) + 1}{2^n + 1} > 1 - \varepsilon,
$$

  where

$$
F_{\text{process}}(U_1, U_2) = \left|\frac{\mathrm{Tr}(U_1 U_2^\dagger)}{2^n} \right|^2,
$$

  and we set $\varepsilon$ to $10^{-12}$ to account for round-off errors on few-qubit systems. This metric is chosen for consistency with other closeness checks in Qiskit.

  When possible, commutation relations are queried from a lookup table. This is the case for standard gates without parameters (such as [`XGate`](qiskit.circuit.library.XGate "qiskit.circuit.library.XGate") or [`HGate`](qiskit.circuit.library.HGate "qiskit.circuit.library.HGate")) or gates with free parameters (such as [`RXGate`](qiskit.circuit.library.RXGate "qiskit.circuit.library.RXGate") with a [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression") as angle). Otherwise, a matrix-based check is performed, where two operations are said to commute, if the average gate fidelity of performing the commutation is above a certain threshold (see `approximation_degree`). The result of this commutation is then added to the cached lookup table.

  ## Methods

  **Parameters**

  *   **standard\_gate\_commutations** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) –
  *   **cache\_max\_entries** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) –
  *   **gates** (*Optional\[Set\[*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")*]]*) –

  ### check\_commutation\_entries

  <Function id="qiskit.circuit.CommutationChecker.check_commutation_entries" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/commutation_checker.py#L113-L133" signature="check_commutation_entries(first_op, first_qargs, second_op, second_qargs)">
    Returns stored commutation relation if any

    **Parameters**

    *   **first\_op** ([*Operation*](qiskit.circuit.Operation "qiskit.circuit.operation.Operation")) – first operation.
    *   **first\_qargs** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")) – first operation’s qubits.
    *   **second\_op** ([*Operation*](qiskit.circuit.Operation "qiskit.circuit.operation.Operation")) – second operation.
    *   **second\_qargs** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")) – second operation’s qubits.

    **Returns**

    True if the gates commute and false if it is not the case.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
  </Function>

  ### clear\_cached\_commutations

  <Function id="qiskit.circuit.CommutationChecker.clear_cached_commutations" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/commutation_checker.py#L109-L111" signature="clear_cached_commutations()">
    Clears the dictionary holding cached commutations
  </Function>

  ### commute

  <Function id="qiskit.circuit.CommutationChecker.commute" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/commutation_checker.py#L69-L103" signature="commute(op1, qargs1, cargs1, op2, qargs2, cargs2, max_num_qubits=3, approximation_degree=1.0)">
    Checks if two Operations commute. The return value of True means that the operations truly commute, and the return value of False means that either the operations do not commute or that the commutation check was skipped (for example, when the operations have conditions or have too many qubits).

    **Parameters**

    *   **op1** ([*Operation*](qiskit.circuit.Operation "qiskit.circuit.operation.Operation")) – first operation.
    *   **qargs1** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")) – first operation’s qubits.
    *   **cargs1** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")) – first operation’s clbits.
    *   **op2** ([*Operation*](qiskit.circuit.Operation "qiskit.circuit.operation.Operation")) – second operation.
    *   **qargs2** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")) – second operation’s qubits.
    *   **cargs2** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")) – second operation’s clbits.
    *   **max\_num\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – the maximum number of qubits to consider, the check may be skipped if the number of qubits for either operation exceeds this amount.
    *   **approximation\_degree** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")) – If the average gate fidelity in between the two operations is above this number (up to `1e-12`) they are assumed to commute.

    **Returns**

    whether two operations commute.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
  </Function>

  ### commute\_nodes

  <Function id="qiskit.circuit.CommutationChecker.commute_nodes" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/commutation_checker.py#L59-L67" signature="commute_nodes(op1, op2, max_num_qubits=3, approximation_degree=1.0)">
    Checks if two DAGOpNodes commute.

    **Parameters**

    *   **max\_num\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) –
    *   **approximation\_degree** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")) –

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
  </Function>

  ### num\_cached\_entries

  <Function id="qiskit.circuit.CommutationChecker.num_cached_entries" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/commutation_checker.py#L105-L107" signature="num_cached_entries()">
    Returns number of cached entries
  </Function>
</Class>

